<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reInfo" />

   <EditText
        android:id="@+id/u_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userInfo"/>

   <EditText
       android:id="@+id/u_pwd"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:hint="@string/pwdInfo"
       android:password="true"
       tools:ignore="Deprecated"/>

	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="44dp"
	    tools:ignore="Deprecated" >
			
	    <Button
          android:id="@+id/logout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
          android:gravity="right"
          android:onClick="logout"
          android:text="@string/logoutInfo"/>

      <TextView
          android:id="@+id/register"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_marginBottom="56dp"
          android:layout_marginRight="100dp"
          android:layout_toLeftOf="@+id/login"
          android:gravity="right"
          android:onClick="register"
          android:text="@string/register" />

      <Button
          android:id="@+id/login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_toLeftOf="@+id/logout"
          android:gravity="right"
          android:text="@string/loginInfo" />

      </RelativeLayout>
      
	
	
	
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dqyh"/>
    <TextView
        android:id="@+id/name" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ydcp"/>
   
    <ListView 
        android:id="@+id/user_meal_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>


